2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>,
	* man/xml-source/amarchiver.8.xml: amanda-archive-format man page is
	                                   in section 5.

2008-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Dumpcache.pm
	  installcheck/Installcheck/Run.pm installcheck/amdump.pl
	  installcheck/pp-scripts.pl: move amdump_diag to Installcheck::Run, fix
	  it, and use it in amdump and pp-scripts
	* application-src/amlog-script.pl: don't pretend to be script-email
	* man/Makefile.am: amanda-archive-format should be section 5
	* man/xml-source/amanda-archive-format.5.xml: small tweaks
	* man/xml-source/amanda-changers.7.xml: fix authorship
	* man/xml-source/amanda.8.xml: add link to amvault(8)
	* man/xml-source/amvault.8.xml: enumerate limitations of this version
	* perl/Amanda/Config.swg: fix mem leak in config_dir_relative wrapper

2008-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/dirs.m4: add --with-amdatadir
	* example/Makefile.am: use it for examples and templates
	* perl/Amanda/Paths.pm.in: add $amdatadir
	* server-src/amserverconfig.pl: use it
	* packaging/deb/rules packaging/rpm/amanda.spec: packaging changes
	  so that built packages still put examples and templates in
	  /var/lib/amanda

2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>,
	* application-src/amstar.c: Use fgets to read star output.
	* application-src/amgtar.c: Use fgets to read gtar output.

2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>, 
	    Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/util.c: Convert underscore in application and script
			     property name to dash.
	* device-src/property.c: Make underscore and dash equal in device
				 property name.
	* installcheck/Amanda_Device.pl: Check device property name with
					 mixed case and dash.
	* installcheck/pp-scripts.pl: Check property name with underscore.

2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>